<resources>
    <string name="app_name">IdealTrade</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="make_a_simple_request">Make a Simple Request</string>
    <string name="post_an_item">Post an Item</string>
    <string name="post_a_skill">Post a Skill</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="queries">Queries</string>
    <string name="donations">Donations</string>
    <string name="complaints">Complaints</string>
    <string name="suggestion_box">Suggestion Box</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="take_action">Take Action</string>
    <string name="comments">Comments</string>
    <string name="verify_account">Verify Account</string>
    <string name="account_management">Account Management</string>
    <string name="inbox">Inbox</string>
    <string name="contacts">Contacts</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="video_sharing">Video Sharing</string>
    <string name="file_sharing">File Sharing</string>
    <string name="trading_overview">Trading Overview</string>
    <string name="trades">Trades</string>
    <string name="favourite_listings">favourite Listings</string>
    <string name="my_listings">My Listings</string>
    <string name="notifications">Notifications</string>
    <string name="feedback">Feedback</string>
    <string name="hello_world">Hello World</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
</resources>
